<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width = "match_parent"
    android:layout_height = "match_parent"
    android:background = "@color/colorPrimaryDark"
    android:orientation = "vertical"
    android:paddingBottom = "@dimen/activity_vertical_margin"
    android:paddingEnd = "@dimen/activity_vertical_margin"
    android:paddingLeft = "@dimen/activity_horizontal_margin"
    android:paddingRight = "@dimen/activity_horizontal_margin"
    android:paddingTop = "@dimen/activity_vertical_margin">

    <TextView
        android:id = "@+id/roundNum"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "70dp"
        android:text = "@string/round"
        android:textColor = "@color/text"
        android:textSize = "@dimen/header_text"/>

    <LinearLayout
        android:layout_width = "1dp"
        android:layout_height = "300dp"
        android:layout_centerHorizontal = "true"
        android:layout_marginRight = "5dp"
        android:layout_marginEnd="5dp"
        android:layout_marginTop = "105dp"
        android:background = "@color/text"
        android:orientation = "horizontal">
    </LinearLayout>

    <RelativeLayout
        android:layout_width = "@dimen/in_game_column_horizontal"
        android:layout_height = "fill_parent"
        android:layout_alignParentLeft = "true"
        android:layout_alignParentStart = "true">

        <LinearLayout
            android:layout_width = "wrap_content"
            android:layout_height = "fill_parent"
            android:layout_centerHorizontal = "true"
            android:orientation = "vertical">

            <TextView
                android:id = "@+id/p1Name"
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:paddingBottom = "@dimen/activity_vertical_margin"
                android:text = "@string/player_name_holder"
                android:textAlignment = "center"
                android:textColor = "@color/text"
                android:textSize = "@dimen/header_text"/>

            <TextView
                android:id = "@+id/p1Score"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/score_place_holder"
                android:textColor = "@color/text"
                android:textSize = "@dimen/score_text"/>

            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height = "match_parent">

                <Button
                    android:id = "@+id/btnP1PlusOnBoard"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_above = "@id/player1InHole"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart = "true"
                    android:text = "@string/plus_button"/>

                <EditText
                    android:id = "@+id/player1OnBoard"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart = "true"
                    android:layout_below = "@id/btnP1PlusOnBoard"
                    android:layout_marginLeft = "9dp"
                    android:layout_marginStart = "9dp"
                    android:inputType = "number"
                    android:text = "@string/bags_place_holder"
                    android:textAlignment = "center"
                    android:textColor = "@color/text"
                    android:textSize = "@dimen/num_bags_text"/>

                <Button
                    android:id = "@+id/btnP1PlusInHole"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_above = "@id/player1InHole"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:text = "@string/plus_button"/>

                <EditText
                    android:id = "@+id/player1InHole"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:layout_centerVertical = "true"
                    android:layout_marginEnd = "9dp"
                    android:layout_marginRight = "9dp"
                    android:inputType = "number"
                    android:text = "@string/bags_place_holder"
                    android:textAlignment = "center"
                    android:textColor = "@color/text"
                    android:textSize = "@dimen/num_bags_text"/>

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_above = "@+id/btnP1PlusOnBoard"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart="true"
                    android:text = "On Board"
                    android:textColor = "@color/text"
                    android:textSize = "12sp"/>

                <TextView
                    android:id = "@+id/textView"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_above = "@+id/btnP1PlusInHole"
                    android:layout_alignParentRight = "true"
                    android:layout_alignParentEnd="true"
                    android:text = "In Hole"
                    android:textColor = "@color/text"
                    android:textSize = "12sp"/>

                <Button
                    android:id = "@+id/btnP1MinusOnBoard"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart = "true"
                    android:layout_below = "@id/player1OnBoard"
                    android:text = "@string/minus_button"/>

                <Button
                    android:id = "@+id/btnP1MinusInHole"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:layout_below = "@id/player1InHole"
                    android:text = "@string/minus_button"/>

            </RelativeLayout>
        </LinearLayout>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width = "@dimen/in_game_column_horizontal"
        android:layout_height = "fill_parent"
        android:layout_alignParentEnd = "true"
        android:layout_alignParentRight = "true">

        <LinearLayout
            android:layout_width = "wrap_content"
            android:layout_height = "fill_parent"
            android:layout_centerHorizontal = "true"
            android:orientation = "vertical">

            <TextView
                android:id="@+id/p2Name"
                android:layout_width = "fill_parent"
                android:layout_height = "wrap_content"
                android:paddingBottom = "@dimen/activity_vertical_margin"
                android:text = "@string/player_name_holder"
                android:textAlignment = "center"
                android:textColor = "@color/text"
                android:textSize = "@dimen/header_text"/>

            <TextView
                android:id = "@+id/p2Score"
                android:layout_width = "wrap_content"
                android:layout_height = "wrap_content"
                android:text = "@string/score_place_holder"
                android:textAlignment = "center"
                android:textColor = "@color/text"
                android:textSize = "@dimen/score_text"/>

            <RelativeLayout
                android:layout_width = "match_parent"
                android:layout_height = "match_parent">

                <Button
                    android:id = "@+id/btnP2PlusOnBoard"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_above = "@id/player2InHole"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart = "true"
                    android:text = "@string/plus_button"/>

                <EditText
                    android:id = "@+id/player2OnBoard"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart = "true"
                    android:layout_below = "@id/btnP2PlusOnBoard"
                    android:layout_marginLeft = "9dp"
                    android:layout_marginStart = "9dp"
                    android:inputType = "number"
                    android:text = "@string/bags_place_holder"
                    android:textAlignment = "center"
                    android:textColor = "@color/text"
                    android:textSize = "@dimen/num_bags_text"/>

                <Button
                    android:id = "@+id/btnP2PlusInHole"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_above = "@id/player2InHole"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:text = "@string/plus_button"/>

                <EditText
                    android:id = "@+id/player2InHole"
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:layout_centerVertical = "true"
                    android:layout_marginEnd = "9dp"
                    android:layout_marginRight = "9dp"
                    android:inputType = "number"
                    android:text = "@string/bags_place_holder"
                    android:textAlignment = "center"
                    android:textColor = "@color/text"
                    android:textSize = "@dimen/num_bags_text"/>

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_above = "@id/btnP2PlusOnBoard"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart="true"
                    android:text = "@string/on_board"
                    android:textColor = "@color/text"
                    android:textSize = "12sp"/>

                <TextView
                    android:layout_width = "wrap_content"
                    android:layout_height = "wrap_content"
                    android:layout_above = "@id/btnP2PlusInHole"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:text = "@string/in_hole"
                    android:textColor = "@color/text"
                    android:textSize = "12sp"/>

                <Button
                    android:id = "@+id/btnP2MinusOnBoard"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_alignParentLeft = "true"
                    android:layout_alignParentStart = "true"
                    android:layout_below = "@id/player2OnBoard"
                    android:text = "@string/minus_button"/>

                <Button
                    android:id = "@+id/btnP2MinusInHole"
                    android:layout_width = "40dp"
                    android:layout_height = "40dp"
                    android:layout_alignParentEnd = "true"
                    android:layout_alignParentRight = "true"
                    android:layout_below = "@id/player2InHole"
                    android:text = "@string/minus_button"/>
            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>

    <Button
        android:id="@+id/calculateScore"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:layout_centerHorizontal = "true"
        android:layout_marginTop = "415dp"
        android:background = "@color/colorPrimary"
        android:text = "@string/calculate_scores"/>

    <TextView
        android:text = "@string/error_box"
        android:id="@+id/errorBox"
        android:textColor="@color/text"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:visibility="invisible"/>
</RelativeLayout>